WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255886
ASSERTION FAILED: scrollerImp == scroller->scrollerImp() if closing a window while scrolling
https://bugs.webkit.org/show_bug.cgi?id=255886
Summary
ASSERTION FAILED: scrollerImp == scroller->scrollerImp() if closing a window ...
Simon Fraser (smfr)
Reported
2023-04-24 13:43:27 PDT
scroller->scrollerImp() is nil, scrollerImp is not. ASSERTION FAILED: scrollerImp == scroller->scrollerImp() /Volumes/Data/Development/system/webkit/OpenSource/Source/WebCore/page/scrolling/mac/ScrollerPairMac.mm(103) : -[WebScrollerImpPairDelegateMac scrollerImpPair:convertContentPoint:toScrollerImp:] 1 0x1398d4ef9 WTFCrash 2 0x14fad106b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x151716a1b -[WebScrollerImpPairDelegateMac scrollerImpPair:convertContentPoint:toScrollerImp:] 4 0x7ff80d06e119 -[NSScrollerImpPair _updateOverlayScrollersStateWithReason:forcingVisibilityForHorizontalKnob:verticalKnob:] 5 0x151725569 WebCore::ScrollerPairMac::updateValues()::$_7::operator()() const 6 0x1517254a9 WTF::Detail::CallableWrapper<WebCore::ScrollerPairMac::updateValues()::$_7, void>::call() 7 0x14faf0532 WTF::Function<void ()>::operator()() const 8 0x151727a69 WebCore::ScrollerPairMac::ensureOnMainThreadWithProtectedThis(WTF::Function<void ()>&&)::$_12::operator()() 9 0x151727879 WTF::Detail::CallableWrapper<WebCore::ScrollerPairMac::ensureOnMainThreadWithProtectedThis(WTF::Function<void ()>&&)::$_12, void>::call() 10 0x1398ff6d2 WTF::Function<void ()>::operator()() const 11 0x13999639e WTF::RunLoop::performWork() 12 0x13999a38e WTF::RunLoop::performWork(void*) 13 0x7ff809dc806a __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 14 0x7ff809dc800c __CFRunLoopDoSource0 15 0x7ff809dc7de5 __CFRunLoopDoSources0 16 0x7ff809dc6a6f __CFRunLoopRun 17 0x7ff809dc6071 CFRunLoopRunSpecific 18 0x7ff81382dfcd RunCurrentEventLoopInMode 19 0x7ff81382ddde ReceiveNextEventCommon 20 0x7ff81382db38 _BlockUntilNextEventMatchingListInModeWithFilter 21 0x7ff80ce578c0 _DPSNextEvent 22 0x7ff80ce5676a -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] 23 0x7ff80ce48dd8 -[NSApplication run] 24 0x7ff80ce1cff2 NSApplicationMain 25 0x106da6366 main 26 0x7ff80999241f start (lldb)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-24 13:43:46 PDT
<
rdar://problem/108469342
>
Nikos Mouchtaris
Comment 2
2023-04-24 15:59:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13123
EWS
Comment 3
2023-05-01 14:00:15 PDT
Committed
263557@main
(f719f87b0747): <
https://commits.webkit.org/263557@main
> Reviewed commits have been landed. Closing PR #13123 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug