ASSERTION FAILED: scrollerImp == scroller->scrollerImp() if closing a window while scrolling https://bugs.webkit.org/show_bug.cgi?id=255886 rdar://108469342

Reviewed by Simon Fraser.

The order of destruction is ScrollingTreeScrollingNodeDelegateMac -> ScrollerPairMac ->
ScrollerMac. We don't want to release the scroller imps in ScrollingTreeScrollingNodeDelegateMac
because we have yet to remove the delegate from the scroller imps. This can lead to a state where
we get a call to convertContentPoint when our reference to the scroller imps in ScrollerMac are
already released. To resolve this, move this call to ~ScrollerPairMac and move the ScrollerMac
calls to the individual scroller imps to their own function and call them in ~ScrollerPairMac.

* Source/WebCore/page/scrolling/mac/ScrollerPairMac.mm:
(-[WebScrollerImpPairDelegateMac scrollerImpPair:convertContentPoint:toScrollerImp:]):
(WebCore::ScrollerPairMac::~ScrollerPairMac):
* Source/WebCore/page/scrolling/mac/ScrollingTreeScrollingNodeDelegateMac.mm:
(WebCore::ScrollingTreeScrollingNodeDelegateMac::~ScrollingTreeScrollingNodeDelegateMac):

Canonical link: https://commits.webkit.org/263557@main